--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,21 @@
-body {
-  text-align: center;
-}
+body { text-align: center; }
 
-h1 {
-  font-family: cursive;
-  font-size: 45px;
-}
+h1 { font-family: cursive; font-size: 45px; }
 
-p {
-  font-size: 25px;
-  font-weight: bold;
-}
+p { font-size: 25px; font-weight: bold; }
 
-button {
-  margin: 7px;
-  padding: 10px 50px;
-  max-width: 100%;
-  font-size: 17px;
-  font-weight: 600;
-  text-align: center;
-  color: #fff;
-  background-color: #000;
-  border: 3px solid #4E505A;
-  border-radius: 4px;
-  transition: color .3s, background-color .3s;
-  cursor: pointer;
-  text-decoration: none;
-}
-button:hover, button:active {
-  color: #000;
-  background-color: #fff;
-}
+button { margin: 7px; padding: 10px 50px; max-width: 100%; font-size: 17px; font-weight: 600; text-align: center; color: #fff; background-color: #000; border: 3px solid #4E505A; border-radius: 4px; transition: color .3s, background-color .3s; cursor: pointer; text-decoration: none; }
 
-.btn {
-  display: flex;
-  justify-content: center;
-}
+button:hover, button:active { color: #000; background-color: #fff; }
 
-.comment {
-  margin-top: 20px;
-  font-size: 20px;
-  font-weight: bold;
-}
+.btn { display: -ms-flexbox; display: flex; -ms-flex-pack: center; justify-content: center; }
 
-.box2 {
-  display: inline-block;
-  margin: 0;
-  width: 100px;
-  border: 4px solid #000;
-  min-height: 15px;
-  text-align: center;
-}
-.box2 header {
-  font-size: 25px;
-  font-weight: bold;
-  border-bottom: 5px solid #000;
-}
+.comment { margin-top: 20px; font-size: 20px; font-weight: bold; }
 
-.box {
-  display: inline-block;
-  margin: 30px;
-  width: 250px;
-  border: 4px solid #000;
-  min-height: 150px;
-  text-align: center;
-}
-.box header {
-  font-size: 25px;
-  font-weight: bold;
-  border-bottom: 5px solid #000;
-}
+.box2 { display: inline-block; margin: 0; width: 100px; border: 4px solid #000; min-height: 15px; text-align: center; }
+
+.box2 header { font-size: 25px; font-weight: bold; border-bottom: 5px solid #000; }
+
+.box { display: inline-block; margin: 30px; width: 250px; border: 4px solid #000; min-height: 150px; text-align: center; }
+
+.box header { font-size: 25px; font-weight: bold; border-bottom: 5px solid #000; }
