--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,9 @@ button {
 		background-color: #fff;
 	}
 }
+header {
+  font-size: 30px;
+}
 .btn {
   display: flex;
   justify-content: center;
@@ -63,3 +66,40 @@ button {
     border-bottom: 5px solid #000;
   }
 }
+.overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.7);
+	
+	&.show {
+		display: block;
+	}
+}
+
+.modal {
+	display: none;
+	background: #fff;
+	width: 400px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate3d(-50%, -50%, 0);
+
+	&.show {
+		display: block;
+	}
+	
+	&.close {
+		position: absolute;
+		right: 0;
+		top: 0;
+		padding: 5px;
+		color: #000;
+		text-decoration: none;
+  }
+}
+	
