--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,33 @@
-body {
-  text-align: center;
-}
+body { text-align: center; }
 
-h1 {
-  font-family: cursive;
-  font-size: 45px;
-}
+h1 { font-family: cursive; font-size: 45px; }
 
-p {
-  font-size: 25px;
-  font-weight: bold;
-}
+p { font-size: 25px; font-weight: bold; }
 
-button {
-  margin: 7px;
-  padding: 10px 50px;
-  max-width: 100%;
-  font-size: 17px;
-  font-weight: 600;
-  text-align: center;
-  color: #fff;
-  background-color: #000;
-  border: 3px solid #4E505A;
-  border-radius: 4px;
-  transition: color .3s, background-color .3s;
-  cursor: pointer;
-  text-decoration: none;
-}
+button { margin: 7px; padding: 10px 50px; max-width: 100%; font-size: 17px; font-weight: 600; text-align: center; color: #fff; background-color: #000; border: 3px solid #4E505A; border-radius: 4px; transition: color .3s, background-color .3s; cursor: pointer; text-decoration: none; }
 
-button:hover, button:active {
-  color: #000;
-  background-color: #fff;
-}
+button:hover, button:active { color: #000; background-color: #fff; }
 
-header {
-  font-size: 30px;
-}
+header { font-size: 30px; }
 
-.btn {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-}
+.btn { display: -ms-flexbox; display: flex; -ms-flex-pack: center; justify-content: center; }
 
-.comment {
-  margin-top: 20px;
-  font-size: 20px;
-  font-weight: bold;
-}
+.comment { margin-top: 20px; font-size: 20px; font-weight: bold; }
 
-.box2 {
-  display: inline-block;
-  margin: 0;
-  width: 100px;
-  border: 4px solid #000;
-  min-height: 15px;
-  text-align: center;
-}
+.box2 { display: inline-block; margin: 0; width: 100px; border: 4px solid #000; min-height: 15px; text-align: center; }
 
-.box2 header {
-  font-size: 25px;
-  font-weight: bold;
-  border-bottom: 5px solid #000;
-}
+.box2 header { font-size: 25px; font-weight: bold; border-bottom: 5px solid #000; }
 
-.box {
-  display: inline-block;
-  margin: 30px;
-  width: 250px;
-  border: 4px solid #000;
-  min-height: 150px;
-  text-align: center;
-}
+.box { display: inline-block; margin: 30px; width: 250px; border: 4px solid #000; min-height: 150px; text-align: center; }
 
-.box header {
-  font-size: 25px;
-  font-weight: bold;
-  border-bottom: 5px solid #000;
-}
+.box header { font-size: 25px; font-weight: bold; border-bottom: 5px solid #000; }
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-}
+.overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); }
 
-.overlay.show {
-  display: block;
-}
+.overlay.show { display: block; }
 
-.modal {
-  display: none;
-  background: #fff;
-  width: 400px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
-}
+.modal { display: none; background: #fff; width: 400px; position: absolute; top: 50%; left: 50%; transform: translate3d(-50%, -50%, 0); }
 
-.modal.show {
-  display: block;
-}
+.modal.show { display: block; }
 
-.modal.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 5px;
-  color: #000;
-  text-decoration: none;
-}
-/*# sourceMappingURL=style.css.map */
+.modal.close { position: absolute; right: 0; top: 0; padding: 5px; color: #000; text-decoration: none; }
