--- a/sass/style.scss
+++ b/sass/style.scss
@@ -60,12 +60,12 @@ header {
 	border: 4px solid #000;
 	min-height: 150px;
 	text-align: center;
-  header {
+}
+header {
     font-size: 25px;
     font-weight: bold;
-    border-bottom: 5px solid #000;
+    border-bottom:3px solid #000;
   }
-}
 .overlay {
 	display: none;
 	position: fixed;
@@ -92,8 +92,8 @@ header {
 	&.show {
 		display: block;
 	}
-	
-	&.close {
+}
+.close {
 		position: absolute;
 		right: 0;
 		top: 0;
@@ -101,5 +101,18 @@ header {
 		color: #000;
 		text-decoration: none;
   }
+
+table,
+td,
+th {
+	border: 1px solid black;
+	font-size: 16px;
+}
+
+table {
+	margin: 0 auto;
+}
+.winner {
+	font-size: 24px;
 }
 	
